# dycore

./: .cppdefs  .gitignore  CMakeLists.txt  README.md  check_dycore_time.py  compilescript.bash  dycore.def
.devcontainer/: devcontainer.json
exec_spectral.mazama/: Makefile  atmosphere_mod.mod  constants_mod.mod  diag_axis_mod.mod  diag_manager_mod.mod  diag_output_mod.mod  fft99_mod.mod  fft_mod.mod  field_manager_mod.mod  fms_io_mod.mod  fms_mod.mod  fv_advection_mod.mod  gauss_and_legendre_mod.mod  gaussian_topog_mod.mod  global_integral_mod.mod  grid_fourier_mod.mod  horiz_interp_mod.mod  hs_forcing_mod.mod  implicit_mod.mod  leapfrog_mod.mod  matrix_invert_mod.mod  memutils_mod.mod  mpp_domains_mod.mod  mpp_io_mod.mod  mpp_mod.mod  platform_mod.mod  press_and_geopot_mod.mod  spec_mpp_mod.mod  spectral_damping_mod.mod  spectral_dynamics_mod.mod  spectral_init_cond_mod.mod  spectral_initialize_fields_mod.mod  spherical_fourier_mod.mod  spherical_mod.mod  time_manager_mod.mod  topog_regularization_mod.mod  topography_mod.mod  tracer_manager_mod.mod  tracer_type_mod.mod  transforms_mod.mod  (+3 more)
input/: bgrid_field_table  bgrid_namelist  bgrid_pathnames  bgrid_pathnames.html  cg_drag_king_params.nc  cg_drag_nml  hs_diag_table  input.spectral.nml  spectral_barotropic_diag_table  spectral_barotropic_namelist  spectral_barotropic_pathnames  spectral_barotropic_pathnames.html  spectral_field_table_orig  spectral_namelist  spectral_namelist_check2_gerber09  spectral_namelist_old  spectral_namelist_sponge  spectral_pathnames  spectral_shallow_diag_table  spectral_shallow_namelist  spectral_shallow_pathnames  spectral_shallow_pathnames.html
input/CVS/: Entries  Repository
jobs/: do_initial_perbation_runs.sh  run_height_0.bs  run_height_4000_tmp.bs  run_spectral_sample.bs
postprocessing/: mppnccombine.c
postprocessing/CVS/: Entries  Repository  Root
run_IP_tree/: finish_mppncc.sh  run_ip_tree.bs  run_spec_seq.bs  run_spec_seq_follow.bs  run_spec_seq_follow_test.bs
scripts/: ._active_run_o7.sh  ._compile_spectral_mazama.sh  ._run_spectral.mazama  ._run_spectral_run.bash  ._run_spectral_sample.bs  ._run_spectral_sample2.bs  ._run_spectral_start.bash  compile_spectral_mazama.sh  compile_spectral_sherlock.sh  do_initial_perbation_runs.sh  input.nml  interp_apr1_01.m  new_run.sh  restart_dycore_spectral.bs  run_spectral  run_spectral.mazama  run_spectral_barotropic  run_spectral_run_old.bash  run_spectral_sample.bs  run_spectral_sample2.bs  run_spectral_sample_sherlock.bs  run_spectral_shallow  run_spectral_start.bash  test.sh  test_script.bs
scripts/archive/: active_run_o7.sh  cp_desc_dd.sh  init_dir.sh  run_bgrid  run_spectral_run.bash
scripts_IP_runs/: run_spectral_h0.bs  run_spectral_h4000.bs
scripts_delh/: namelist_delh.nml  run_delh.bs
src/CVS/: Entries  Repository
src/atmos_bgrid/CVS/: Entries  Repository
src/atmos_bgrid/documentation/: bgrid_supdoc.html
src/atmos_bgrid/model/: bgrid_advection.f90  bgrid_advection.html  bgrid_conserve_energy.f90  bgrid_core.f90  bgrid_core.html  bgrid_core_driver.f90  bgrid_core_driver.html  bgrid_horiz_adjust.f90  bgrid_horiz_diff.f90  bgrid_horiz_diff.html  bgrid_sponge.f90  bgrid_sponge.html  bgrid_vert_adjust.f90
src/atmos_bgrid/tools/: bgrid_change_grid.html  bgrid_cold_start.f90  bgrid_cold_start.html  bgrid_diagnostics.f90  bgrid_diagnostics.html  bgrid_halo.f90  bgrid_halo.html  bgrid_horiz.f90  bgrid_horiz.html  bgrid_integrals.f90  bgrid_integrals.html  bgrid_masks.f90  bgrid_masks.html  bgrid_polar_filter.f90  bgrid_polar_filter.html  bgrid_prog_var.f90  bgrid_prog_var.html  bgrid_vert.f90  bgrid_vert.html
src/atmos_param/: CMakeLists.txt
src/atmos_param/CVS/: Entries  Repository
src/atmos_param/cg_coupler/: cg_coupler.f90
src/atmos_param/cg_drag/: cg_drag.f90
src/atmos_param/cg_drag_king/: cg_drag_king.f90
src/atmos_param/cg_drag_ref/: cg_drag_ref.f90
src/atmos_param/hs_forcing/: hs_forcing.f90  hs_forcing.html  hs_forcing_check2_gerber09.f90  hs_forcing_nosponge.f90  hs_forcing_orig.f90  hs_forcing_usethis.f90
src/atmos_shared/: CMakeLists.txt
src/atmos_shared/CVS/: Entries  Repository
src/atmos_solo/: ._atmos_model.f90  CMakeLists.txt  atmos_model.f90
src/atmos_solo/CVS/: Entries  Repository
src/atmos_spectral/: CMakeLists.txt
src/atmos_spectral/CVS/: Repository
src/atmos_spectral/init/: ._spectral_init_cond.f90  ._spectral_init_cond_orig.f90  ._spectral_initialize_fields.f90  spectral_init_cond.f90  spectral_init_cond_orig.f90  spectral_initialize_fields.f90  topog_regularization.f90  topog_regularization.html  vert_coordinate.f90  vert_coordinate_orig.f90
src/atmos_spectral/model/: ._spectral_damping.f90  ._spectral_dynamics.f90  ._spectral_dynamics.html  fv_advection.f90  fv_advection.html  global_integral.f90  (+15 more)
src/atmos_spectral_barotropic/: atmosphere.f90  atmosphere.html  barotropic_diagnostics.f90  barotropic_diagnostics.html  barotropic_dynamics.f90  barotropic_dynamics.html  barotropic_physics.f90  barotropic_physics.html
src/atmos_spectral_shallow/: ._atmosphere.f90  ._shallow_physics.f90  atmosphere.f90  atmosphere.html  shallow_diagnostics.f90  shallow_diagnostics.html  shallow_dynamics.f90  shallow_dynamics.html  shallow_physics.f90  shallow_physics.html
src/shared/: CMakeLists.txt
tools/: dycore_data_examiner.ipynb  pydycore.py
(+118 files in other folders)
